--- a/OnPaceRaceAdmin.Web/appsettings.json
+++ b/OnPaceRaceAdmin.Web/appsettings.json
@@ -6,7 +6,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=opr-dev.cpg5wznsaxzi.us-east-2.rds.amazonaws.com;port=3306;database=OCR_DEV;uid=admin;password=KGCwZJ1fEQVEovx5giBv"
+    "DefaultConnection": "server=opr-dev.cpg5wznsaxzi.us-east-2.rds.amazonaws.com;port=3306;database=OCR_DEV;uid=admin;password=KGCwZJ1fEQVEovx5giBv",
+    "IdentityConnection": "server=opr-dev.cpg5wznsaxzi.us-east-2.rds.amazonaws.com;port=3306;database=OPR_IDENTITY;uid=admin;password=KGCwZJ1fEQVEovx5giBv"
+
 
   }
 }
